--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
             <p>R, Time Series Analysis, Forecasting Models, Data Visualization</p>
             
             <!-- <a href="https://github.com/ArathiS1/Google-ads-India-trend-analysis" target="_blank" class="btn btn-primary">Visit Live Site</a> -->
-            <a href="http://127.0.0.1:5500/Google_Ads_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
+            <a href="https://arathis1.github.io/portfolio/Google_Ads_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
             <button class="btn btn-outline-primary back-button">Back to Projects</button>
         </div>
     </div>
@@ -808,7 +808,7 @@
             </ul>
             <h3>Technologies Used</h3>
             <p>Python, Machine Learning, Scikit-learn, SHAP, Pandas, NumPy</p>
-            <a href="http://127.0.0.1:5500/Churn_Predictive_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
+            <a href="https://arathis1.github.io/portfolio/Churn_Predictive_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
             <button class="btn btn-outline-primary back-button">Back to Projects</button>
         </div>
     </div>
@@ -829,7 +829,7 @@
             </ul>
             <h3>Technologies Used</h3>
             <p>Power BI, SQL, Excel, Data Visualization, DAX</p>
-            <a href="http://127.0.0.1:5500/Sales_Performance_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
+            <a href="https://arathis1.github.io/portfolio/Sales_Performance_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
             <button class="btn btn-outline-primary back-button">Back to Projects</button>
         </div>
     </div>
@@ -850,7 +850,7 @@
             </ul>
             <h3>Technologies Used</h3>
             <p>Tableau, Python, Statistical Analysis, Data Ethics</p>
-            <a href="http://127.0.0.1:5500/Compass_Audit_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
+            <a href="https://arathis1.github.io/portfolio/Compass_Audit_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
             <button class="btn btn-outline-primary back-button">Back to Projects</button>
         </div>
     </div>
@@ -871,7 +871,7 @@
             </ul>
             <h3>Technologies Used</h3>
             <p>Python, Scikit-learn, SHAP, Natural Language Processing, Pandas</p>
-            <a href="http://127.0.0.1:5500/Google_Play_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
+            <a href="https://arathis1.github.io/portfolio/Google_Play_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
             <button class="btn btn-outline-primary back-button">Back to Projects</button>
         </div>
     </div>
@@ -892,7 +892,7 @@
             </ul>
             <h3>Technologies Used</h3>
             <p>Power BI, SQL, Market Analysis, Data Visualization</p>
-            <a href="http://127.0.0.1:5500/Google_Market_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
+            <a href="https://arathis1.github.io/portfolio/Google_Market_Analysis.html" target="_blank" class="btn btn-primary">Visit Live Site</a>
             <button class="btn btn-outline-primary back-button">Back to Projects</button>
         </div>
     </div>
